--- a/ForumApi.csproj
+++ b/ForumApi.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
   </ItemGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\debug\netcoreapp2.0\ApiForumApi.xml</DocumentationFile>
+  </PropertyGroup>
 
 </Project>
